--- a/src/style.css
+++ b/src/style.css
@@ -38,7 +38,7 @@ h1 {
     background-position: 1px;
     background-repeat: no-repeat;
     font-size: 16px;
-    padding: 10px 17px 12px 50px;
+    padding: 10px 17px 12px 45px;
     border: 1px solid #ddd;
 }
 
@@ -75,4 +75,5 @@ h1 {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    border-radius: 12px;
 }
